# Franqueadoras-API

./: .gitignore  app.py  main.py  pyproject.toml
core/: settings.py
core/data/: database.py
core/data/models/: __init__.py  cargo_model.py  endereco_model.py  estoque_model.py  franqueadora_model.py  franquia_model.py  funcionario_model.py  lancamento_financeiro_categoria_model.py  lancamento_financeiro_model.py  movimentacao_estoque_model.py  produto_model.py
domain/entities/: __init__.py  cargo.py  endereco.py  estoque.py  franqueadora.py  franquia.py  funcionario.py  lancamento_financeiro.py  lancamento_financeiro_categoria.py  movimentacao_estoque.py  produto.py
domain/entities/abstractions/: base.py
domain/enums/: lancamento_financeiro_tipo.py  movimentacao_estoque_tipo.py  status.py
domain/exceptions/: cnpj.py  currency.py  domain.py  endereco.py  funcionario.py  inventory.py  text.py  value_objects.py
domain/validators/: cnpj.py  currency.py  endereco.py  estoque.py  inventory_movement.py  text.py
domain/value_objects/: cnpj.py
infrastructure/: exception_handlers.py  settings.py
infrastructure/data/: database.py
infrastructure/data/models/: __init__.py  cargo_model.py  endereco_model.py  estoque_model.py  franqueadora_model.py  (+6 more)
infrastructure/repositories/: cargo_repository.py  endereco_repository.py  estoque_repository.py  franqueadora_repository.py  franquia_repository.py  funcionario_repository.py  lancamento_financeiro_categoria_repository.py  lancamento_financeiro_repository.py  movimentacao_estoque_repository.py  produto_repository.py
