[project]
name = "franqueadora-api"
version = "1.0.0"
description = "Web API for managing franchise"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlacodegen-v2>=0.1.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "tzdata>=2026.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT", "FAST"]

[tool.taskipy.tasks]
run = 'fastapi dev .\app.py'
test = "pytest --cov=. -vv"
post_test = "coverage html"
